# maply

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  geometry.py  pyproject.toml  release.py  test.ipynb
.github/workflows/: ci.yml  publish.yml
docs/: PLAN.md
examples/: introduction.ipynb  quickstart.ipynb  spatial_join.ipynb
maply/: geometry.py  plot.py
src/maply/: __init__.py  geocanvas.py  geometry.py  interaction.py  model.py  render.py  tools.py  transform.py  widget.py
tests/: test.ipynb  test_geo_conversion.py  test_geometry.py  test_interaction.py  test_plot.py  test_transform.py
tools/: release.py
