[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maply"
version = "0.1.0"
description = "A package for geometry shapes and map visualizations"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
  { name = "Austin Breunig", email = "abreunig9@gmail.com" }
]
urls = { Homepage = "https://github.com/austinbreunig/maply" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "matplotlib",
  "shapely",
  "geopandas"
]

[project.optional-dependencies]
draw = ["folium", "plotly"]
dev = ["ipykernel", "pytest", "tomlkit"]

