[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maply"
dynamic = ["version"]
description = "A Jupyter notebook widget for interactively drawing shapes and converting them to shapely / WKT."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Austin Breunig" }]
keywords = ["jupyter", "widget", "gis", "geospatial", "shapely", "wkt", "drawing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "ipycanvas>=0.13",
    "ipywidgets>=8.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
geopandas = ["geopandas>=0.13"]
geo = ["ipyleaflet>=0.18"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "geopandas>=0.13",
    "ipyleaflet>=0.18",
]

[project.urls]
Homepage = "https://github.com/austinbreunig/maply"
Repository = "https://github.com/austinbreunig/maply"
Issues = "https://github.com/austinbreunig/maply/issues"

[tool.hatch.version]
path = "src/maply/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maply"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
